manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serverloader
  namespace: serverloader
spec:
  selector:
    matchLabels:
      app: serverloader
  template:
    metadata:
      labels:
        app: serverloader
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "80"
    spec:
      containers:
        - name: serverloader
          image: ghcr.io/sabbour/aks-scaling-demo:main
          resources:
            requests:
              cpu: 2000m
              memory: 100Mi
            limits:
              cpu: 4000m
              memory: 300Mi
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /stats
              port: http
          readinessProbe:
            httpGet:
              path: /stats
              port: http
