manifests/drift-deploy.yaml
#this 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inflate
  namespace: workshop
spec:
  replicas: 5
  selector:
    matchLabels:
      app: inflate
  template:
    metadata:
      labels:
        app: inflate
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - image: mcr.microsoft.com/oss/kubernetes/pause:3.6
          name: inflate
          resources:
            requests:
              cpu: "1"
      nodeSelector:
        aks-immersion-team: my-team
