manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serverloader
  namespace: serverloader
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
  selector:
    app: serverloader
