manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: serverloader
  namespace: serverloader
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: ""  # Will be updated by the script
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: serverloader
                port:
                  number: 80
